# valhalla-size-viz

./: Cargo.toml  Dockerfile  Dockerfile.test  LICENSE-MIT  README.md  deny.toml
.github/workflows/: push_docker_image.yml  sanity_checks.yml
docs/plans/: 20260617-valhalla-tile-size-viz.md
docs/plans/completed/: 20260617-valhalla-tile-size-viz.md
src/: api.rs  cache.rs  lib.rs  main.rs  tiles.rs  upstream.rs
tests/: serve_html.rs
web/: countries.js  index.html  poly-data.js
web/poly/: australia-oceania.poly
web/poly/africa/: algeria.poly  egypt.poly  morocco.poly  south-africa.poly
web/poly/asia/: afghanistan.poly  china.poly  india.poly  iraq.poly  israel-and-palestine.poly  kazakhstan.poly  mongolia.poly  nepal.poly
web/poly/australia-oceania/: australia.poly  new-zealand.poly
web/poly/europe/: austria.poly  iceland.poly  ireland-and-northern-ireland.poly  poland.poly  portugal.poly
web/poly/north-america/: canada.poly  mexico.poly  us.poly
web/poly/north-america/us/: alabama.poly  alaska.poly  arizona.poly  arkansas.poly  california.poly  delaware.poly  district-of-columbia.poly  florida.poly  hawaii.poly  indiana.poly  kansas.poly  kentucky.poly  maine.poly  maryland.poly  michigan.poly  missouri.poly  nebraska.poly  new-hampshire.poly  new-mexico.poly  new-york.poly  north-dakota.poly  ohio.poly  oklahoma.poly  pennsylvania.poly  rhode-island.poly  tennessee.poly  texas.poly  vermont.poly  virginia.poly  washington.poly  west-virginia.poly  wisconsin.poly
web/poly/south-america/: argentina.poly  bolivia.poly  brazil.poly  colombia.poly  ecuador.poly  peru.poly  uruguay.poly  venezuela.poly
