[package]
name = "valhalla-size-viz"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
description = "valhalla-size-viz"
readme = "README.md"
repository = "https://github.com/Stepan Kizim/valhalla-size-viz"
license = "MIT OR Apache-2.0"
include = ["**/*.rs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
lto = "thin"

[dependencies]

[dev-dependencies]
pretty_assertions = "1"
